cabal-version:       2.2
name:                runnah
version:             0.1.0.0
synopsis:            A tool for running containers in development environments.
description:         Please see the README on GitHub at <https://github.com/krystalcode/hs-runnah>
homepage:            https://github.com/krystalcode/runnah
bug-reports:         https://github.com/krystalcode/runnah/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Dimitris Bozelos
maintainer:          Dimitris Bozelos <dbozelos@gmail.com>
copyright:           2024 Dimitris Bozelos
category:            Development
build-type:          Simple
extra-source-files:  README.org
                     CHANGELOG.md
tested-with:         GHC == 9.4.8

source-repository head
  type: git
  location: https://github.com/krystalcode/runnah

common common-options
  build-depends:       base >=4.7 && <5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wmissing-deriving-strategies
                       -fhide-source-paths

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Runnah

executable runnah
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       runnah
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite runnah-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       runnah
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark runnah-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , runnah
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
